fix: Realização de alterações nos pacotes de importações